Fix Broken css

--- a/styles.css
+++ b/styles.css
@@ -24,6 +24,10 @@ html, body {
 }
 #mainContainer {
     position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
     overflow: auto;
 }
 body {
